--- a/Frontend/src/Pages/Main/Main.css
+++ b/Frontend/src/Pages/Main/Main.css
@@ -11,7 +11,7 @@ body {
   }
   
   .container {
-    max-width: 800px;
+    width: 800px;
     background-color: #ffffff;
     padding: 30px;
     border-radius: 10px;
@@ -49,6 +49,23 @@ body {
     -webkit-background-clip: text;
     color: transparent;
     text-align: center;
+  }
+
+  .error-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    background: linear-gradient(90deg, #d43301, #ff4500);
+    -webkit-background-clip: text;
+    color: transparent;
+    text-align: center;
+  }
+
+  .error-message {
+    font-size: 1rem;
+    font-weight: 500;
+    color: #000;
+    text-align: center;
+    margin-bottom: 15px;
   }
 
   .codeInput {
