--- a/Frontend/src/Pages/Main/Main.css
+++ b/Frontend/src/Pages/Main/Main.css
@@ -25,7 +25,7 @@ body {
     font-size: 2.5rem;
     margin-bottom: 20px;
     font-weight: bold;
-    background: linear-gradient(90deg, #ffa800, #ff4500);
+    background: linear-gradient(90deg, #13b9be, #6200ff);
     -webkit-background-clip: text;
     color: transparent;
     text-align: center;
@@ -36,7 +36,7 @@ body {
     font-size: 1.5rem;
     margin-bottom: 20px;
     font-weight: bold;
-    background: linear-gradient(90deg, #ffa800, #ff4500);
+    background: linear-gradient(90deg, #13b9be, #6200ff);
     -webkit-background-clip: text;
     color: transparent;
     text-align: center;
@@ -45,7 +45,7 @@ body {
   h4 {
     font-size: 1.5rem;
     font-weight: bold;
-    background: linear-gradient(90deg, #ffa800, #ff4500);
+    background: linear-gradient(90deg, #ec6002, #ff4500);
     -webkit-background-clip: text;
     color: transparent;
     text-align: center;
