--- a/Frontend/src/Pages/Main/Main.css
+++ b/Frontend/src/Pages/Main/Main.css
@@ -113,10 +113,11 @@ h1:last-child {
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease;
+    width: 100px;
 }
 
 .input-container button.submit-button:disabled {
-    background-color: #6c757d;
+    background-color: #1d63a1;
     cursor: not-allowed;
 }
 
@@ -132,11 +133,13 @@ h1:last-child {
     background-color: #007bff;
     color: white;
     cursor: pointer;
+    width: 100px;
+    font-weight: bold;
     transition: background-color 0.3s ease;
 }
 
 .copy-button:disabled {
-    background-color: #6c757d;
+    background-color: #0056b3;
     cursor: not-allowed;
 }
 
