--- a/Frontend/src/Pages/Main/Main.css
+++ b/Frontend/src/Pages/Main/Main.css
@@ -75,7 +75,8 @@ h1:last-child {
 .message-content {
   margin-top: 10px;
   font-family: 'Helvetica', 'Arial', sans-serif;
-  text-align: left;
+  text-align: left; 
+  font-size: 1rem;
 }
 
 .message.user {
