--- a/Frontend/src/Pages/Main/Main.css
+++ b/Frontend/src/Pages/Main/Main.css
@@ -239,11 +239,17 @@ h1:last-child {
 
   .messages {
       margin-bottom: 15px;
+      font-size: 0.9rem;
+      width: 100%;
+      height: 50vh;
   }
 
   .message .bubble {
-      max-width: 90%;
+      max-width: 95%;
       padding: 8px 12px;
+      font-size: 0.9rem;
+      word-break: break-word;
+      white-space: pre-wrap;
   }
 
   .input-container textarea {
