--- a/Frontend/src/Pages/Main/Main.css
+++ b/Frontend/src/Pages/Main/Main.css
@@ -11,8 +11,8 @@ body {
 }
 
 .container {
-  width: 800px;
-  height: 800px;
+  width: 50vw;
+  height: 80vh;
   background-color: #ffffff;
   padding: 30px;
   border-radius: 10px;
@@ -21,6 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 h1:first-child {
@@ -46,12 +47,13 @@ h1:last-child {
 .chat-container {
   display: flex;
   flex-direction: column;
-  height: 600px;
-  width: 700px;
+  height: 60vh;
+  width: 50vw;
   background-color: #ffffff;
   border-radius: 20px;
   padding: 20px;
   overflow: hidden;
+  overflow-y: auto;
   position: relative;
 }
 
@@ -110,6 +112,8 @@ h1:last-child {
 .input-container {
   display: flex;
   align-items: center;
+  width: 100%;
+  margin-bottom: 0px;
 }
 
 .input-container textarea {
@@ -141,6 +145,11 @@ h1:last-child {
 
 .input-container button.submit-button:hover:not(:disabled) {
   background-color: #0056b3;
+}
+
+.input-container button.submit-button.loading {
+  background-color: #4CBB17;
+  border-color: #4CBB17;
 }
 
 .copy-button {
@@ -232,7 +241,7 @@ h1:last-child {
   }
 
   .chat-container {
-      height: 60vh;
+      height: 55vh;
       width: 85%;
       padding: 15px;
   }
